objects/dbu_searchString__c.object
<CustomObject>
    <fields>
        <fullName>dbu_storeCountry__c</fullName>
        <label>dbu_storeCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_userIpAddress__c</fullName>
        <label>dbu_userIpAddress</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_userSearchString__c</fullName>
        <label>dbu_userSearchString</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>dbu_searchString</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>dbu_storeCountry__c</columns>
        <columns>dbu_userSearchString__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>dbu_searchString Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dbu_searchString</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>